<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loki</string>
    <string name="devrice_admin_explanation">Password management rights needed to lock and unlock
        your device.</string>
    <string name="password_enabled">Password enabled:</string>
    <string name="password_disabled">Password disabled</string>
    <string name="settings_summary">Configure Loki</string>
    <string name="set_password_description">Enter your desired PIN. This PIN will be required to unlock your device if it is not connected to a safe network. Note that this WILL override PIN
        set elsewhere.</string>
    <string name="set_password_title">Phone PIN</string>
    <string name="set_wifi_title">Set trusted WiFi name</string>
    <string name="set_wifi_name_description">Enter a WiFi network that you trust. When connected to
        this device, a PIN will not be required for unlock.</string>
    <string name="loki_disabled_warning">Loki is disabled. Make sure you\'ve defined a PIN and safe
        WiFi name</string>
    <string name="disable_keyguard_summary">Phone will not show keyguard when on a safe network (experimental)</string>
    <string name="disable_keyguard_title">Disable Keyguard</string>
    <string name="admin_disabled_message">For security reasons, your device will now be locked with
        the PIN set in Loki</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="disable_keyguard_summary_off">Keyguard is always shown</string>
    <string name="force_login_summary_off">Loki will run without a PIN (not secure)</string>
    <string name="force_login_summary">Your PIN is required when launching Loki (recommended)</string>
    <string name="admin_explanation">Loki needs admin rights in order to lock and unlock your
        device</string>
    <string name="expired_msg">This alpha/beta version of Loki has expired</string>
    <string name="expired">Expired</string>
    <string name="quit">Quit</string>
    <string name="select_wifi_network">Select a WiFi network</string>
    <string name="set_bt_name_description">Enter a Bluetooth device that you trust. When connected
        to
        this device, a PIN will not be required for unlock.</string>
    <string name="set_bt_name">Set trusted Bluetooth device name</string>
    <string name="bt_unlock">Bluetooth unlock enabled</string>
    <string name="launch_loki">Launch Loki</string>
    <string name="wifi_unlock_desc">Allow PIN to be disabled using WiFi</string>
    <string name="wifi_unlock_title">Enable WiFi unlocking</string>
    <string name="bt_unlock_desc">Allow PIN to be disabled using a Bluetooth device</string>
    <string name="bt_unlock_title">Enable Bluetooth unlocking</string>
    <string name="select_bt">Pick a paired Bluetooth device</string>
    <string name="no_wifi_networks_configured">No WiFi networks configured. Run this setup again
        when you\'ve connected to your safe WiFi network</string>
    <string name="wifi_setup">WiFi Setup</string>
    <string name="pair">Pair</string>
    <string name="bt_unlock_enabled">Bluetooth Unlock enabled</string>
    <string name="driving_unlock_enabled">Driving unlock enabled</string>
    <string name="unlock_in_vehicle">Unlock in vehicle</string>
    <string name="unlock_in_vehicle_summary">Unlock phone when it is in a moving vehicle. NOTE: Texting while driving is DANGEROUS!</string>
    <string name="vehicle_unlock_summary">Set duration to keep phone unlocked after exiting vehicle. Handy to prevent phone lock when vehicle idles.</string>
    <string name="vehicle_unlock">Exit vehicle delay (in minutes)</string>
    <string name="gplay_error_msg">This feature relies on Google Play Services, which is unavailable or outdated on your device</string>
    <string name="title_activity_setup_pin">SetupPinActivity</string>
    <string name="title_activity_setup_wizard">SetupWizardActivity</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="prev">Previous</string>
    <string name="review">Review</string>
    <string name="finish">Finish</string>
    <string name="submit_confirm_message">You\'ve setup Loki! You can always runt this wizard again.</string>
    <string name="submit_confirm_button">Okay</string>
    <string name="welcome_to_loki">Welcome to Loki! Please setup a passcode to secure your phone.</string>
    <string name="setup">Setup</string>
    <string name="wifi_network">wifi network</string>
    <string name="title_pin_setup">PIN setup</string>
    <string name="title_vehicle_unlock">In-vehicle unlock</string>
    <string name="title_bt_unlock">Select safe device(s)</string>
    <string name="title_wifi_unlock">Select safe network(s)</string>
    <string name="title_activity_wifi_select">WifiSelectActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pre_wizard_setup">Loki Setup</string>
    <string name="grant_loki_admin_rights">Grant Loki admin rights</string>
    <string name="setup_loki">Setup Loki</string>
    <string name="admin_rights_granted">Admin rights granted</string>
    <string name="no_admin_rights">No admin rights :(</string>
    <string name="enable_bt">Enable Bluetooth</string>
    <string name="bt_enabled">Bluetooth enabled</string>
    <string name="enable_wifi">Enable WiFi</string>
    <string name="wifi_enabled">WiFi enabled</string>
    <string name="loki_enabled">Loki smart unlock enabled</string>
    <string name="run_setup_wizard">Run Setup Wizard</string>
    <string name="device_locekd">Device secured via PIN</string>
    <string name="device_unlocked">Device is currently unlocked</string>
    <string name="unlock_event_occured">Device lock status updated</string>
    <string name="save">Save</string>
    <string name="welcome_text">Loki needs admin rights to do fancy stuff such as setting your PIN or password and unlocking your phone. </string>
    <string name="welcome_text_2">To setup Bluetooth or WiFi unlocks, enable them now. You can disable them after setup is complete.</string>
    <string name="lock_device">Lock device</string>
    <string name="driving">Driving</string>
    <string name="unlock_factors">Unlock factors: </string>
    <string name="enable_in_vehicle_unlock">In-vehicle unlock</string>
    <string name="title_activity_unlock">Activity Based Unlock</string>
    <string name="rerun_setup_wizard">Touch to run setup wizard again</string>
    <string name="add_more">ADD MORE</string>

</resources>
