<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="password"
        android:title="@string/set_password_title"
        android:inputType="numberPassword"
        android:summary="@string/set_password_description" />

    <CheckBoxPreference
        android:key="wifi_unlock"
        android:title="@string/wifi_unlock_title"
        android:summary="@string/wifi_unlock_desc"
        />

    <Preference
        android:key="wifi_name"
        android:title="@string/set_wifi_title"
        android:summary="@string/set_wifi_name_description"
        android:enabled="false"
        />

    <CheckBoxPreference
        android:key="bt_unlock"
        android:title="@string/bt_unlock_title"
        android:summary="@string/bt_unlock_desc" />

    <Preference
        android:key="bt_name"
        android:title="@string/set_bt_name"
        android:summary="@string/set_bt_name_description"
        android:enabled="false"
        />

    <CheckBoxPreference
        android:key="activity_unlock"
        android:title="@string/unlock_in_vehicle"
        android:summary="@string/unlock_in_vehicle_summary" />

    <EditTextPreference
        android:key="activity_unlock_delay"
        android:title="@string/vehicle_unlock"
        android:inputType="number"
        android:summary="@string/vehicle_unlock_summary"
        />

    <CheckBoxPreference
        android:key="disable_keyguard"
        android:title="@string/disable_keyguard_title"
        android:summaryOn="@string/disable_keyguard_summary"
        android:summaryOff="@string/disable_keyguard_summary_off" />

    <CheckBoxPreference
        android:key="force_login"
        android:title="Secure Loki using PIN"
        android:summaryOn="@string/force_login_summary"
        android:summaryOff="@string/force_login_summary_off" />

</PreferenceScreen>