<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:columnCount="2"
        android:rowCount="3"
        tools:context="com.bernieeng.loki.ui.activity.PreWizardSetupActivity$PlaceholderFragment">

        <TextView
            android:paddingTop="16dp"
            android:layout_columnSpan="2"
            android:text="Welcome to Loki!"
            style="@style/WizardPageTitle" />

        <View
            android:layout_columnSpan="2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/loki_blue" />

        <TextView
            android:paddingTop="16dp"
            android:layout_columnSpan="2"
            style="@style/LokiText"
            android:text="@string/welcome_text" />

        <TextView
            android:id="@+id/txt_admin_rights"
            style="@style/LokiText"
            android:text="@string/grant_loki_admin_rights"
            android:fontFamily="fonts/Roboto-Condensed.ttf"
            android:paddingTop="16dp" />

        <Switch
            android:id="@+id/tgl_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp" />

        <TextView
            android:paddingTop="32dp"
            android:layout_columnSpan="2"
            style="@style/LokiText"
            android:text="@string/welcome_text_2" />

        <TextView
            android:id="@+id/txt_bt"
            style="@style/LokiText"
            android:text="Enable Bluetooth"
            android:fontFamily="fonts/Roboto-Condensed.ttf"
            android:paddingTop="16dp" />

        <Switch
            android:id="@+id/tgl_bluetooth"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/txt_wifi"
            android:text="Enable WiFi"
            android:fontFamily="fonts/Roboto-Condensed.ttf"
            style="@style/LokiText"
            android:paddingTop="16dp" />

        <Switch
            android:id="@+id/tgl_wifi"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_columnSpan="2"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btn_setup"
            android:text="@string/no_admin_rights"
            android:layout_width="200dp"
            android:enabled="false"
            android:layout_gravity="fill_horizontal|bottom"
            android:layout_columnSpan="2" />

    </GridLayout>
</ScrollView>